--- a/views/tutorial.ejs
+++ b/views/tutorial.ejs
@@ -6,98 +6,96 @@
     <title>Project Seed</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/logo-user.svg">
-    <style>
-        .vertical-line {
-            border-left: 2px solid rgb(255, 255, 255);
-            height: 100vh;
-            position: fixed;
-            left: 50%;
-            top: 0;
-            transform: translateX(-50%);
-            z-index: 4;
-        }
-        .content-text {
-            position: relative;
-            z-index: 2;
-        }
-        .section {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .top-buttons{
-            z-index: 10;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/user.css">
 </head>
 <body>
 
-    <div class="vertical-line"></div>
-
-    <section id="tut1" class="content section vh-100 bg-dark text-white">
-        <div class="text-center mt-4 top-buttons">
-            <a href="#tut2" class="btn btn-light" >Next Section</a>
-        </div>
-        <div class="row m-0 d-flex justify-content-end content-text" >
-            <div class="col">
-
+    <section id="tut1" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <a href="#tut2" class="btn btn-light">1</a>
             </div>
-            <div class="col p-4 d-flex justify-content-center">
-                <div style="width: 600px;">
-                    <h2>Paano Gumawa ng Plot</h2>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim.</p>    
-                
+            <div class="col d-flex justify-content-center align-items-center">
+                <!-- Left side content if needed -->
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2">Paano Gumawa ng Plot</p>
+                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
                 </div>
             </div>
         </div>
-      
     </section>
 
-    <section id="tut2" class="content section vh-100 bg-warning text-white">
-        <div class="text-center mt-4 top-buttons">
-            <a href="#tut3" class="btn btn-light">Next Section</a>
-        </div>
-        <div class="row m-0 d-flex justify-content-end content-text" >
-            <div class="col">
-
+    <section id="tut2" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <a href="#tut3" class="btn btn-light">2</a>
             </div>
-            <div class="col p-4 d-flex justify-content-center">
-                <div style="width: 600px;">
-                    <h2>Paano Gumawa ng Plot</h2>
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2">Paano Gumawa ng Plot</p>
                     <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim.</p>    
-                
+                </div>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+               
+            </div>
+        </div>
+    </section>
+
+    <section id="tut3" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <a href="#tut4" class="btn btn-light">3</a>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <!-- Left side content if needed -->
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2">Paano Gumawa ng Plot</p>
+                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
                 </div>
             </div>
         </div>
-      
     </section>
 
-    <section id="tut3" class="content section vh-100 bg-primary text-white">
-        <div class="text-center mt-4 top-buttons">
-            <a href="#tut1" class="btn btn-light">Back to Section 1</a>
-        </div>
-        <div class="row m-0 d-flex justify-content-end content-text" >
-            <div class="col">
-
+    <section id="tut4" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <a href="#tut5" class="btn btn-light">4</a>
             </div>
-            <div class="col p-4 d-flex justify-content-center">
-                <div style="width: 600px;">
-                    <h2>Paano Gumawa ng Plot</h2>
-                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim.</p>    
-                
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3" style="max-width: 530px;">
+                    <p class="h2">Pagpili ng lokasyon</p>
+                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
                 </div>
             </div>
-            
+            <div class="col d-flex justify-content-center align-items-center">
+                
+            </div>
         </div>
-       
     </section>
 
-    <div class="container">
-        
-    <form action="/complete-tutorial" method="post" class="text-center mt-4">
-        <button type="submit" class="btn btn-success">Complete</button>
-    </form>
-    </div>
+    <section id="tut5" class="section">
+        <div class="row m-0 vh-100">
+            <div class="text-center top-buttons">
+                <form action="/complete-tutorial" method="post" class="text-center mt-4">
+                    <button type="submit" class="btn btn-light">Finish</button>
+                </form>
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <!-- Left side content if needed -->
+            </div>
+            <div class="col d-flex justify-content-center align-items-center">
+                <div class="content-text text-white p-3 mt-5" style="max-width: 530px;">
+                    <p class="h2">Paano Gumawa ng Plot</p>
+                    <p>Pumili ng lugar na patag upang maiwasan ang erosyon, may sapat na sikat ng araw, ngunit may lilim na bahagi rin para sa mga sensitibong tanim, may maayos na daloy ng tubig, at malapit sa bahay para sa madaliang pagpunta.</p>    
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
