notification for dry soil

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,9 +67,7 @@
                     <p class="m-0 gray-text todo-text">To do list</p>
                 </div>
                 <div class="px-4">
-                    <p>askdjhaksdksajhd</p>
-                    <p>askdjhaksdksajhd</p>
-                    <p>askdjhaksdksajhd</p>
+                    <!-- needs to do -->
                 </div>
             </div>
         </div>    
