--- a/views/addPlant.ejs
+++ b/views/addPlant.ejs
@@ -1,6 +1,51 @@
 <%- include("partials/UserHeader.ejs") %>
 
 <div class="container-fluid">
+    <% if (monthlyPlants.length > 0) { %>
+        <div class="monthly-plants-container mx-auto">
+            <div class="best-to-plant">
+                <p class="current-month-text text-center m-0">Best to plant in <%= currentMonth %></p>
+            </div>
+            <div class="d-flex gap-4 justify-content-lg-center justify-content-sm-start py-5 px-2 mt-3" style="overflow-y: scroll;">
+                <% monthlyPlants.forEach(function(plant) { %>
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <div class="rounded-image-container rounded-circle p-2 d-flex align-items-center">
+                            <img src="<%= plant.image %>" alt="<%= plant.name %>" style="width: 100%;">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center flex-column">
+                            <p class="m-0"><%= plant.name %></p>
+                            <div style="width: 40px; background-color:#59A645; height: 5px; border-radius: 100px;"></div>
+                        </div>
+                    </div>
+                <% }); %>
+            </div>
+        </div>
+    <% } else { %>
+        <div class="monthly-plants-container mx-auto">
+            <p class="text-center">No plants available for <%= currentMonth %>.</p>
+        </div>
+    <% } %>
+    
+        
+
+    <div class="available-plants-container mx-auto text-center" style="overflow-y: scroll;">
+        <p class="nexa-black h3 gray-text mt-2">Available Plants</p>
+        <div class="d-flex gap-3">
+            <div class="d-flex gap-3" style="overflow-y: scroll;">
+                <% plantCollections.forEach(function(plant) { %>
+                    <div class="available-plants-card">
+                        <img class="p-2 mt-3" src="<%= plant.image %>" alt="<%= plant.name %>" style="width: 100px; height: 100px;">
+                        <p class="gray-text h4"><%= plant.name %></p>
+                        <p class="gray-text"><%= plant.harvestTime %> days to harvest</p>
+                    </div>
+                      
+                <% }); %>
+            </div>
+            
+        </div>   
+    </div>
+  
+    
     <h1>Add New Plant</h1>
     <form action="/add-new-plant" method="POST">
         <input type="hidden" name="userId" value="<%= userId %>"> <!-- Use passed userId here -->
