--- a/views/editPlant.ejs
+++ b/views/editPlant.ejs
@@ -16,6 +16,19 @@
             <input type="number" class="form-control" id="harvestTime" name="harvestTime" value="<%= plant.harvestTime %>" required>
         </div>
         <div class="form-group">
+            <label for="plantingMonth">Planting Month:</label>
+            <div>
+                <% const months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']; %>
+                <% months.forEach(function(month) { %>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" name="plantingMonth" value="<%= month %>" 
+                        <%= plant.plantingMonth.includes(month) ? 'checked' : '' %>>
+                        <label class="form-check-label"><%= month %></label>
+                    </div>
+                <% }); %>
+            </div>
+        </div>
+        <div class="form-group">
             <label for="plantImage">Upload Plant Image (optional):</label>
             <input type="file" class="form-control-file" id="plantImage" name="plantImage" accept="image/*">
             <p>Current Image:</p>
