--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,35 +1,86 @@
 <%- include("partials/LoginPageHeader.ejs") %>
 
-          <div class="login-container">
-               <form action="/login" method="post" class="login-form py-4">
-                    <div class="text-center">
-                         <p class="h5 fw-bold mt-3">Sign In</p>
-                         <p class="light-text mt-2">Welcome back</p>
+
+<style>
+     #login-section{
+          background-image: url(/images/bg-login.svg);
+          height: 100vh;
+     }
+     .plant-pic-container{
+          max-width: 450px;
+     }
+     .plant-pic-container img{
+          width: 100%;
+     }
+     .login-title{
+          font-family: "Nexa-Black";
+          color: white;
+          max-width: 500px;
+          font-size: clamp(25px, 3vw, 40px);
+          text-align: center;
+     }
+     .login-card{
+          border-radius: 60px;
+          max-width: 450px;
+          max-height: 700px;
+          height: 100%;
+          background-color: rgba(255, 255, 255, 0.7);
+     }
+     .nexa{
+          font-family: "Nexa-Black";
+     }
+     .grey-text{
+          color: #6B6B6B;
+     }
+     .transparent{
+          background-color: rgba(255, 255, 255, 0);
+          border: 1px solid #B3B3B3;
+          border-radius: 100px;
+     }
+</style>
+     <section id="login-section">
+          <div class="row m-0 p-0 ">
+               <div class="d-lg-block d-none col-lg-6 d-flex justify-content-center align-items-center flex-column" style="height: 100vh;">
+                    <p class="login-title mx-auto mt-5">Permaculture: Plant the Seeds, Fulfill your Needs.</p>
+                    <div class="plant-pic-container mx-auto">
+                         <img src="/images/plant-pic.svg" alt="">
                     </div>
-                    <div>
-                         <% if (locals.message) { %>
-                         <small class="success-message"><%= message %></small>
-                         <% } %> <% if (locals.wrongCridentials) { %>
-                         <small class="wrong-message">*<%= wrongCridentials %></small>
-                         <% } %>
-                    </div>
-                    <div class="mt-3">
-                         <label class="form-label" for="email">Email<span class="input-asterisk">*</span></label>
-                         <input type="text" class="form-control" name="email" placeholder="Email" />
-                    </div>
-                    <div class="mt-3">
-                         <div class="d-flex justify-content-between">
-                              <label class="form-label" for="password">Password<span class="input-asterisk">*</span></label>
-                              <a href="#" class="lighter-text"><small>Forgot Password?</small></a>
+                    
+               </div>
+               <div class="col-lg-6 p-4">
+                    <div class="login-card text-center mx-auto d-flex justify-content-center align-items-center" style="padding: 60px;">
+                         <form action="/login" method="post" class="login-form">
+                              <div>
+                                   <% if (locals.message) { %>
+                                   <small class="success-message"><%= message %></small>
+                                   <% } %> <% if (locals.wrongCridentials) { %>
+                                   <small class="wrong-message">*<%= wrongCridentials %></small>
+                                   <% } %>
+                              </div>
+
+                         <p class="h3 nexa grey-text">Log in</p>
+                         <p class="mx-auto" style="max-width: 400px;">Logging in is the process of verifying your identity to access a website or app.</p>
+                         <div class="mt-4">
+                              <input type="text" class="form-control transparent" name="email" placeholder="Email" />
                          </div>
-                         <input type="password" name="password" class="form-control" placeholder="Password" />
+                         <div class="mt-4">
+                              <input type="password" name="password" class="form-control transparent" placeholder="Password" />
+                         </div>
+                         <div class="d-flex flex-column mt-3">
+                              <div class="d-flex justify-content-end">
+                                   <a href="#" class="lighter-text"><small>Forgot Password?</small></a>
+                              </div>
+                              <button type="submit" class="btn my-button mt-3">Login</button>
+                              <p class="text-center mt-3">Don't have an account?<a class="fs-13" href="/register" class="no-account-text"> Sign up</a></p>
+                         </div>
+                                  
+                         <a class="btn btn-primary" href="admin">Admin</a>
+                    </form>
+           
                     </div>
-                    <div class="d-flex flex-column mt-3">
-                         <button type="submit" class="btn my-button mt-3">Login</button>
-                         <p class="text-center mt-3">Don't have an account?<a class="fs-13" href="/register" class="no-account-text"> Sign up</a></p>
-                    </div>
-               </form>
-               <a class="btn btn-primary" href="admin">Admin</a>
+                    
+               </div>
           </div>
+     </section>
 </body>
 <%- include("partials/LoginFooter.ejs") %>
